--- a/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord/Properties/Resources.resx
+++ b/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord/Properties/Resources.resx
@@ -145,4 +145,7 @@
   <data name="warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\warning.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="台中轉入Template" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\台中轉入Template.xls;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
