2017/4/19 穎驊更新 [10-06][06] 局端service增加國籍欄位 項目完成，加入 家長資料項目 國籍欄位驗證

--- a/JHSchool.Permrec/StudentExtendControls/ParentInfoPalmerwormItem.resx
+++ b/JHSchool.Permrec/StudentExtendControls/ParentInfoPalmerwormItem.resx
@@ -117,4 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="errorProvider1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf8GAKX/RACl/24Apf9uAKX/RgCl/wgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/wAApf9mAKX/6ACl//8Apf//AKX//wCl//8Apf/qAKX/bACl
+        /wIAAAAAAAAAAAAAAAAAAAAAAAAAAACl/wAApf+WAKX//wCl//8Apf//AKX/pgCl/6IApf//AKX//wCl
+        //8Apf+eAKX/AgAAAAAAAAAAAAAAAAAAAAAApf9kAKX//wCl//8Apf//AKX//wCl/woApf8EAKX/+gCl
+        //8Apf//AKX//wCl/2wAAAAAAAAAAAAAAAAApf8EAKX/5gCl//8Apf//AKX//wCl//8Apf+yAKX/rgCl
+        //8Apf//AKX//wCl//8Apf/qAKX/CAAAAAAAAAAAAKX/PgCl//8Apf//AKX//wCl//8Apf//AKX/dgCl
+        /3IApf//AKX//wCl//8Apf//AKX//wCl/0YAAAAAAAAAAACl/2YApf//AKX//wCl//8Apf//AKX//wCl
+        /xAApf8IAKX//wCl//8Apf//AKX//wCl//8Apf9uAAAAAAAAAAAApf9mAKX//wCl//8Apf//AKX//wCl
+        //8Apf8QAKX/CACl//8Apf//AKX//wCl//8Apf//AKX/bgAAAAAAAAAAAKX/PgCl//8Apf//AKX//wCl
+        //8Apf//AKX/EACl/wgApf//AKX//wCl//8Apf//AKX//wCl/0QAAAAAAAAAAACl/wQApf/iAKX//wCl
+        //8Apf//AKX//wCl/xAApf8IAKX//wCl//8Apf//AKX//wCl/+gApf8GAAAAAAAAAAAAAAAAAKX/XgCl
+        //8Apf//AKX//wCl//8Apf8QAKX/CACl//8Apf//AKX//wCl//8Apf9mAAAAAAAAAAAAAAAAAAAAAACl
+        /wAApf+OAKX//wCl//8Apf//AKX/zgCl/8wApf//AKX//wCl//8Apf+WAKX/AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAKX/AACl/14Apf/iAKX//wCl//8Apf//AKX//wCl/+YApf9kAKX/AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAKX/BACl/z4Apf9mAKX/ZgCl/z4Apf8EAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP//AAD4HwAA4AcAAOGHAADAAwAAwYMAAMGDAADBgwAAwYMAAMGDAADhhwAA4AcAAPgf
+        AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
