--- a/JHSchool.Permrec/StudentExtendControls/Reports/RptResource.resx
+++ b/JHSchool.Permrec/StudentExtendControls/Reports/RptResource.resx
@@ -112,20 +112,23 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="入學回覆單樣版_高雄_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>rpttemplate\入學回覆單樣版(高雄).doc;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="在學證明書_無成績_新竹" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>rpttemplate\在學證明書(無成績)新竹.doc;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="在學證明書樣版_高雄_" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>rpttemplate\在學證明書樣版(高雄).doc;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="在學證明書中文_高雄_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>RptTemplate\在學證明書中文(高雄).doc;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="在學證明書中英文" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>rpttemplate\在學證明書中英文.doc;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="學生證樣板_新竹_New" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>rpttemplate\學生證樣板(新竹)new.doc;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
